--- a/FE/ViewTrip.html
+++ b/FE/ViewTrip.html
@@ -5,26 +5,132 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>View Trip</title>
+    <link rel="stylesheet" href="./styles/viewTrip.css" />
+    <link
+      rel="stylesheet"
+      href="//use.fontawesome.com/releases/v6.1.1/css/all.css"
+    />
   </head>
   <body>
-    <div class="container">
-      <div class="searchTrip">
-        <select id="source">
-          <option value="Ho Chi Minh">Ho Chi Minh</option>
-          <option value="Da Nang">Da Nang</option>
-          <option value="Ha Noi">Ha Noi</option>
-          <option value="City A">City A</option>
-        </select>
-        <select id="destination">
-          <option value="Nha Trang">Nha Trang</option>
-          <option value="Hue">Hue</option>
-          <option value="Lam Dong">Lam Dong</option>
-          <option value="City B">City B</option>
-        </select>
-        <button class="search">Search</button>
+    <header>
+      <div class="left">
+        <img
+          src="https://github.com/MayPham2571/train-booking-ticket-system/blob/main/UI/Asset/logo@2x.png?raw=true"
+          alt=""
+        />
       </div>
-      <div class="getTrip">
-        <h1>LIST OF TRIP</h1>
+      <div class="right">
+        <a href="ChangePassword.html">Change Password</a>
+        <a class="lg" href="ViewPage.html">Logout</a>
+      </div>
+    </header>
+    <div class="container">
+      <div class="head">
+        <h3>View Trip</h3>
+        <div class="back">
+          <i class="fas fa-less-than"></i>
+          <a href="homepage.html">Back</a>
+        </div>
+      </div>
+      <div class="content">
+        <div class="stepProgressBar">
+          <div class="tablinks">
+            <p class="step-text">Choose Route</p>
+            <div class="bullet">1</div>
+          </div>
+          <div class="tablinks">
+            <p class="step-text">Route Confirmation</p>
+            <div class="bullet">2</div>
+          </div>
+          <div class="tablinks">
+            <p class="step-text">Customer Information</p>
+            <div class="bullet">3</div>
+          </div>
+          <div class="tablinks">
+            <p class="step-text">Success</p>
+            <div class="bullet bullet1">4</div>
+          </div>
+        </div>
+        <div id="Step1" class="tabcontent">
+          <div class="Step1content">
+            <h3>FROM</h3>
+            <div class="sel sel--black-panther">
+              <select name="source" id="source">
+                <option value="">---</option>
+                <option value="Ho Chi Minh">Ho Chi Minh</option>
+                <option value="Da Nang">Da Nang</option>
+                <option value="Ha Noi">Ha Noi</option>
+                <option value="City A">City A</option>
+              </select>
+            </div>
+            <h3>TO</h3>
+            <div class="sel sel--black-panther">
+              <select name="destination" id="destination">
+                <option value="">---</option>
+                <option value="Nha Trang">Nha Trang</option>
+                <option value="Hue">Hue</option>
+                <option value="Lam Dong">Lam Dong</option>
+                <option value="City B">City B</option>
+              </select>
+            </div>
+            <button class="search">Search</button>
+          </div>
+          <div class="getTrip"></div>
+          <div id="stepBtn" class="stepBtn">
+            <button
+              id="nextBtn"
+              class="tablinks"
+              onclick="openStep(event, 'Step2')"
+            >
+              Next
+            </button>
+          </div>
+        </div>
+        <div id="Step2" class="tabcontent other">
+          <h3>Route Confirmation</h3>
+          <div class="routeInfo"></div>
+          <button
+            id="nextBtn2"
+            class="tablinks"
+            onclick="openStep(event, 'Step3')"
+          >
+            Next
+          </button>
+          <button
+            id="previousBtn"
+            class="tablinks"
+            onclick="openStep(event, 'Step1')"
+          >
+            Previous
+          </button>
+        </div>
+        <div id="Step3" class="tabcontent other">
+          <h3>Step3</h3>
+          <button
+            id="nextBtn3"
+            class="tablinks"
+            onclick="openStep(event, 'Step4')"
+          >
+            Finish
+          </button>
+          <button
+            id="previousBtn2"
+            class="tablinks"
+            onclick="openStep(event, 'Step2')"
+          >
+            Previous
+          </button>
+        </div>
+        <div id="Step4" class="tabcontent other">
+          <h3>Step4</h3>
+          <button
+            id="Continue"
+            class="tablinks"
+            onclick="openStep(event, 'Step1')"
+          >
+            Continue Book
+          </button>
+        </div>
       </div>
     </div>
   </body>
