--- a/FE/register.html
+++ b/FE/register.html
@@ -13,7 +13,7 @@
     <header>
         <div class="HContainer">
             <div class="logo">
-                <img src="/image/logo@2x.png" alt="">
+                <img src="./image/logo@2x.png" alt="">
             </div>
             <a href="Viewpage.html"><i class="fa-solid fa-angle-left"></i>Back</a>
         </div>
