Update CP function

--- a/FE/Viewpage.html
+++ b/FE/Viewpage.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="container">
-      <a href="login.html">LOGIN</a>
-      <a href="register.html">REGISTER</a>
+      <a href="SignIn.html">LOGIN</a>
+      <a href="Register.html">REGISTER</a>
     </div>
   </body>
 </html>
