--- a/FE/ResetPassword.html
+++ b/FE/ResetPassword.html
@@ -15,7 +15,7 @@
           <div class="logo">
               <img src="./image/logo@2x.png" alt="">
           </div>
-          <a href="Viewpage.html"><i class="fa-solid fa-angle-left"></i>Back</a>
+          <a href="SignIn.html"><i class="fa-solid fa-angle-left"></i>Back</a>
       </div>
     </header>
     <main>
