--- a/FE/SignIn.html
+++ b/FE/SignIn.html
@@ -6,38 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <!-- <link rel="stylesheet" href="styles/reset.css"> -->
-    <link rel="stylesheet" href="styles/signin.css">
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v6.1.1/css/all.css">
+    <link rel="stylesheet" href="styles/signin.css" />
+    <link
+      rel="stylesheet"
+      href="//use.fontawesome.com/releases/v6.1.1/css/all.css"
+    />
   </head>
   <body>
     <header>
       <div class="HContainer">
-          <div class="logo">
-              <img src="./image/logo@2x.png" alt="">
-          </div>
-          <a href="Viewpage.html"><i class="fa-solid fa-angle-left"></i>Back</a>
+        <div class="logo">
+          <img src="./image/logo@2x.png" alt="" />
+        </div>
+        <a href="Viewpage.html"><i class="fa-solid fa-angle-left"></i>Back</a>
       </div>
-  </header>
-  <main>
-    <div class="container">
+    </header>
+    <main>
+      <div class="container">
         <h1>LOGIN</h1>
         <form action="">
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email" required><br>
-            <label for="password">Password:</label><br>
-            <input type="password" id="password" name="password" required><br>
-            <div class="center">
-                <input type="submit" id="btn-submit" value="CONFIRM"> <br>
-                <a href="ForgetPassword.html" style="color: #ba131a">Forget Password?</a>
-                <div class="register">
-                    <span>If you don't have an account</span>
-                    <a href="Register.html">REGISTER HERE</a>
-                </div>
+          <label for="email">Email:</label><br />
+          <input type="email" id="email" name="email" required /><br />
+          <label for="password">Password:</label><br />
+          <input type="password" id="password" name="password" required /><br />
+          <div class="center">
+            <input type="submit" id="btn-submit" value="CONFIRM" /> <br />
+            <a href="ForgetPassword.html" style="color: #ba131a"
+              >Forget Password?</a
+            >
+            <div class="register">
+              <span>If you don't have an account</span>
+              <a href="Register.html">REGISTER HERE</a>
             </div>
-
+          </div>
         </form>
-    </div>
-</main>
+      </div>
+    </main>
   </body>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="./js/main.js"></script>
