--- a/FE/homepage.html
+++ b/FE/homepage.html
@@ -4,11 +4,60 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Homepage</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <div class="container"></div>
+    <header>
+      <div class="hleft">
+        <img
+          src="https://github.com/MayPham2571/train-booking-ticket-system/blob/main/UI/Asset/logo@2x.png?raw=true"
+          alt=""
+        />
+      </div>
+      <div class="hright">
+        <a href="ChangePassword.html">Change Password</a>
+        <a class="lg" href="Viewpage.html">Logout</a>
+      </div>
+    </header>
+    <div class="container">
+      <div class="head">
+        <span><a href="ViewTrip.html">View Trip</a></span>
+        <span class="red"><a href="ViewTicket.html">View Ticket</a></span>
+        <span><a href="BookTicket.html">Book Ticket</a></span>
+        <span class="red"><a href="Payment.html">Pay Ticket</a></span>
+        <span><a href="ResetPassword.html">Recharge Balance</a></span>
+        <span class="red"
+          ><a href="UserDetail.html">View Personal Infomation</a></span
+        >
+      </div>
+      <div class="content">
+        <div class="left">
+          <video autoplay loop muted width="100%" height="481px">
+            <source src="./image/Welcome to Vietnam.mp4" />
+          </video>
+        </div>
+        <div class="right">
+          <h1>Welcome to TCAT company</h1>
+          <h2>Travel to anywhere in VietNam as you want</h2>
+          <h3>Let's enjoy</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
+            adipisci soluta obcaecati earum, autem nulla, asperiores quibusdam,
+            voluptate harum consequatur nisi fuga animi nobis. Aut consequuntur
+            error dolorum nesciunt tenetur.
+          </p>
+        </div>
+      </div>
+      <div class="podes">
+        <div class="pleft">
+          <div class="item">
+            <img src="" alt="" />
+          </div>
+        </div>
+        <div class="pright"></div>
+      </div>
+    </div>
   </body>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="./js/homepage.js"></script>
