--- a/FE/BookTicket.html
+++ b/FE/BookTicket.html
@@ -29,7 +29,7 @@
         <h3>Book Ticket</h3>
         <div class="back">
           <i class="fas fa-less-than"></i>
-          <a href="Homepage.html">Back</a>
+          <a href="homepage.html">Back</a>
         </div>
       </div>
       <div class="content">
