--- a/FE/homepage.html
+++ b/FE/homepage.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homepage</title>
     <link rel="stylesheet" href="styles/style.css" />
+    <link
+      rel="stylesheet"
+      href="//use.fontawesome.com/releases/v6.1.1/css/all.css"
+    />
   </head>
   <body>
     <header>
@@ -33,29 +37,56 @@
       </div>
       <div class="content">
         <div class="left">
-          <video autoplay loop muted width="100%" height="481px">
+          <video autoplay loop muted width="100%" height="641px">
             <source src="./image/Welcome to Vietnam.mp4" />
           </video>
         </div>
         <div class="right">
           <h1>Welcome to TCAT company</h1>
-          <h2>Travel to anywhere in VietNam as you want</h2>
+          <h2>Travel to anywhere in VietNam</h2>
           <h3>Let's enjoy</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil
-            adipisci soluta obcaecati earum, autem nulla, asperiores quibusdam,
-            voluptate harum consequatur nisi fuga animi nobis. Aut consequuntur
-            error dolorum nesciunt tenetur.
-          </p>
         </div>
       </div>
       <div class="podes">
-        <div class="pleft">
-          <div class="item">
-            <img src="" alt="" />
+        <h2>Popular Destination</h2>
+        <div class="list">
+          <div class="pleft">
+            <div class="item">
+              <img src="./image/h1.png" alt="" />
+              <div class="ct">
+                <h3>Ha Noi</h3>
+                <i class="fa-solid fa-arrow-right"></i>
+                <h3>Lao Cai</h3>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./image/h2.png" alt="" />
+              <div class="ct">
+                <h3>Ha Noi</h3>
+                <i class="fa-solid fa-arrow-right"></i>
+                <h3>Lao Cai</h3>
+              </div>
+            </div>
+          </div>
+          <div class="pright">
+            <div class="item">
+              <img src="./image/h3.png" alt="" />
+              <div class="ct">
+                <h3>Ha Noi</h3>
+                <i class="fa-solid fa-arrow-right"></i>
+                <h3>Lao Cai</h3>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./image/h4.png" alt="" />
+              <div class="ct">
+                <h3>Ha Noi</h3>
+                <i class="fa-solid fa-arrow-right"></i>
+                <h3>Lao Cai</h3>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="pright"></div>
       </div>
     </div>
   </body>
