update book and homepage

--- a/FE/homepage.html
+++ b/FE/homepage.html
@@ -11,85 +11,7 @@
       href="//use.fontawesome.com/releases/v6.1.1/css/all.css"
     />
   </head>
-  <body>
-    <header>
-      <div class="hleft">
-        <img
-          src="https://github.com/MayPham2571/train-booking-ticket-system/blob/main/UI/Asset/logo@2x.png?raw=true"
-          alt=""
-        />
-      </div>
-      <div class="hright">
-        <a href="ChangePassword.html">Change Password</a>
-        <a class="lg" href="Viewpage.html">Logout</a>
-      </div>
-    </header>
-    <div class="container">
-      <div class="head">
-        <span><a href="ViewTrip.html">View Trip</a></span>
-        <span class="red"><a href="ViewTicket.html">View Ticket</a></span>
-        <span><a href="BookTicket.html">Book Ticket</a></span>
-        <span class="red"><a href="Payment.html">Pay Ticket</a></span>
-        <span><a href="ResetPassword.html">Recharge Balance</a></span>
-        <span class="red"
-          ><a href="UserDetail.html">View Personal Infomation</a></span
-        >
-      </div>
-      <div class="content">
-        <div class="left">
-          <video autoplay loop muted width="100%" height="641px">
-            <source src="./image/Welcome to Vietnam.mp4" />
-          </video>
-        </div>
-        <div class="right">
-          <h1>Welcome to TCAT company</h1>
-          <h2>Travel to anywhere in VietNam</h2>
-          <h3>Let's enjoy</h3>
-        </div>
-      </div>
-      <div class="podes">
-        <h2>Popular Destination</h2>
-        <div class="list">
-          <div class="pleft">
-            <div class="item">
-              <img src="./image/h1.png" alt="" />
-              <div class="ct">
-                <h3>Ha Noi</h3>
-                <i class="fa-solid fa-arrow-right"></i>
-                <h3>Lao Cai</h3>
-              </div>
-            </div>
-            <div class="item">
-              <img src="./image/h2.png" alt="" />
-              <div class="ct">
-                <h3>Ha Noi</h3>
-                <i class="fa-solid fa-arrow-right"></i>
-                <h3>Lao Cai</h3>
-              </div>
-            </div>
-          </div>
-          <div class="pright">
-            <div class="item">
-              <img src="./image/h3.png" alt="" />
-              <div class="ct">
-                <h3>Ha Noi</h3>
-                <i class="fa-solid fa-arrow-right"></i>
-                <h3>Lao Cai</h3>
-              </div>
-            </div>
-            <div class="item">
-              <img src="./image/h4.png" alt="" />
-              <div class="ct">
-                <h3>Ha Noi</h3>
-                <i class="fa-solid fa-arrow-right"></i>
-                <h3>Lao Cai</h3>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </body>
+  <body></body>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="./js/homepage.js"></script>
 </html>
