--- a/FE/UserDetail.html
+++ b/FE/UserDetail.html
@@ -5,9 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Detail</title>
+    <link rel="stylesheet" href="./styles/userdetail.css" />
+    <link
+      rel="stylesheet"
+      href="//use.fontawesome.com/releases/v6.1.1/css/all.css"/>
+
   </head>
   <body>
-    <div class="container"></div>
+    <header>
+      <div class="hleft">
+        <img
+          src="https://github.com/MayPham2571/train-booking-ticket-system/blob/main/UI/Asset/logo@2x.png?raw=true"
+          alt=""
+        />
+      </div>
+      <div class="hright">
+        <a href="ChangePassword.html">Change Password</a>
+        <a class="lg" href="Viewpage.html">Logout</a>
+      </div>
+    </header>
+    <div class="container">
+      <div class="head">
+        <h3>View Personal Information</h3>
+        <div class="back">
+          <i class="fas fa-less-than"></i>
+          <a href="homepage.html">Back</a>
+        </div>
+      </div>
+      <div class="content">
+        <h1>Personal Information</h1>
+        <div class="inside">
+          <div class="box">
+            <h2>Fullname:</h2>
+            <h2>Date of Birth:</h2>
+            <h2>Address:</h2>
+            <h2>Phone number:</h2>
+            <h2>Email:</h2>
+            <h2>ID card number:</h2>
+            <div>
+              <button>Update information</button>
+            </div>
+            
+          </div>
+        </div>
+      </div>  
+    </div>
   </body>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="./js/userDetail.js"></script>
