--- a/FE/ManageUser.html
+++ b/FE/ManageUser.html
@@ -44,8 +44,22 @@
                         <input type="submit" id="search" value ="Search">
                     </form>
                 </div>
+                <div class="body">
+                    <ul class = "list">
+                        <li>
+                            <span>1<span id = "email">maipham@gmail.com</span></span>
+                            <div class="btn-box">
+                                <a href="UpdateUser?id=.html" class="button">Update</a>
+                                <input type="submit" id="delete-btn" value="Delete" class="button">
+                                <a href="RechargeBalance?id=.html" class="button">Recharge Balance</a></li>
+                            </div>
+                    </ul>
+                </div>
             </div>        
         </div>
     </main>
 </body>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://rawgit.com/notifyjs/notifyjs/master/dist/notify.js"></script>
+  <script src="./js/manageUser.js"></script>
 </html>
