--- a/FE/ChangePassword.html
+++ b/FE/ChangePassword.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>View Trip</title>
+    <title>Change Password</title>
     <link rel="stylesheet" href="./styles/changepw.css" />
     <link
       rel="stylesheet"
@@ -24,16 +24,28 @@
       </div>
     </header>
     <main>
-        <div class="container">
-            <h1>CHANGE PASSWORD</h1>
-            <form action="">
-                <label for="oldPassword">Old Password:</label><br>
-                <input type="password" id="oldPassword" name="oldPassword" required><br>
-                <label for="newPassword">New Password:</label><br>
-                <input type="password" id="newPassword" name="newPassword" required><br>
-        </div>
+      <div class="container">
+        <h1>CHANGE PASSWORD</h1>
+        <form action="">
+          <label for="oldPassword">Old Password:</label><br />
+          <input
+            type="password"
+            id="oldPassword"
+            name="oldPassword"
+            required
+          /><br />
+          <label for="newPassword">New Password:</label><br />
+          <input
+            type="password"
+            id="newPassword"
+            name="newPassword"
+            required
+          /><br />
+          <input type="submit" id="pw-submit" value="SUBMIT" /><br />
+        </form>
+      </div>
     </main>
   </body>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="./js/changepw.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="./js/changePassword.js"></script>
 </html>
