--- a/FE/ManageUser.html
+++ b/FE/ManageUser.html
@@ -51,8 +51,17 @@
                             <div class="btn-box">
                                 <a href="UpdateUser?id=.html" class="button">Update</a>
                                 <input type="submit" id="delete-btn" value="Delete" class="button">
-                                <a href="RechargeBalance?id=.html" class="button">Recharge Balance</a></li>
+                                <a href="RechargeBalance?id=.html" class="button">Recharge Balance</a>
                             </div>
+                        </li>
+                        <li>
+                            <span>1<span id = "email">maipham@gmail.com</span></span>
+                            <div class="btn-box">
+                                <a href="UpdateUser?id=.html" class="button">Update</a>
+                                <input type="submit" id="delete-btn" value="Delete" class="button">
+                                <a href="RechargeBalance?id=.html" class="button">Recharge Balance</a>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>        
