--- a/FE/UserDetail.html
+++ b/FE/UserDetail.html
@@ -36,12 +36,33 @@
         <h1>Personal Information</h1>
         <div class="inside">
           <div class="box">
-            <h2>Fullname:</h2>
-            <h2>Date of Birth:</h2>
-            <h2>Address:</h2>
-            <h2>Phone number:</h2>
-            <h2>Email:</h2>
-            <h2>ID card number:</h2>
+            <table>
+              <tr>
+                <td>Full name:</td>
+                <td id="fullname" class="tdoutput"></td>
+              </tr>
+              <tr>
+                <td>Date of birth:</td>
+                <td id="dob" class="tdoutput"></td>
+              </tr>
+              <tr>
+                <td>Address:</td>
+                <td id="address" class="tdoutput"></td>
+              </tr>
+              <tr>
+                <td>Phone number:</td>
+                <td id="phone" class="tdoutput"></td>
+              </tr>
+              <tr>
+                <td>Email:</td>
+                <td id="email" class="tdoutput"></td>
+              </tr>
+              <tr>
+                <td>ID card number:</td>
+                <td id="idCard" class="tdoutput"></td>
+              </tr>
+            </table>
+
             <div>
               <button>Update information</button>
             </div>
