--- a/FE/UserDetail.html
+++ b/FE/UserDetail.html
@@ -21,7 +21,7 @@
       </div>
       <div class="hright">
         <a href="ChangePassword.html">Change Password</a>
-        <a class="lg" href="Viewpage.html">Logout</a>
+        <a class="lg" href="FirstPage.html">Logout</a>
       </div>
     </header>
     <div class="container">
