update manage trip

--- a/FE/CreateTrip.html
+++ b/FE/CreateTrip.html
@@ -20,7 +20,6 @@
         />
       </div>
       <div class="hright">
-        <a href="ChangePassword.html">Change Password</a>
         <a class="lg" href="FirstPage.html">Logout</a>
       </div>
     </header>
@@ -29,7 +28,7 @@
         <h3>Create Trip</h3>
         <div class="back">
           <i class="fas fa-less-than"></i>
-          <a href="homepage.html">Back</a>
+          <a href="ManageTrip.html">Back</a>
         </div>
       </div>
       <div class="content">
@@ -80,7 +79,7 @@
             <tr>
               <th></th>
               <td>
-                <button class="createBtn">Submit</button>
+                <button class="createBtn">Create</button>
               </td>
             </tr>
           </table>
