--- a/FE/ManageUser.html
+++ b/FE/ManageUser.html
@@ -25,7 +25,7 @@
         />
       </div>
       <div class="right">
-        <a class="lg" href="ViewPage.html">Logout</a>
+        <a class="lg" href="">Logout</a>
       </div>
     </header>
     <main>
