--- a/FE/FirstPage.html
+++ b/FE/FirstPage.html
@@ -28,10 +28,49 @@
           </div>
           <div class="content">
             <div class="box">
-
+              <div class="flex">
+                <div class="rbox custom-select" style="width: 600px;">
+                  <h4>FROM</h4>
+                  <select >
+                    <option value="0">Select the source</option>
+                    <option value="1">Ho Chi Minh</option>
+                    <option value="2">Da Nang</option>
+                    <option value="3">Ha Noi</option>
+                    <option value="4">City A</option>
+                  </select>
+                </div>
+                <div class="lbox custom-select" style="width: 600px;">
+                  <h4>TO</h4>
+                  <select>
+                    <option value="0">Select the destination</option>
+                    <option value="1">Nha Trang</option>
+                    <option value="2">Hue</option>
+                    <option value="3">Lam Dong</option>
+                    <option value="4">City B</option>
+                  </select>
+                </div>
+                
+              </div> 
             </div>
+          </div>
+          <div class="search">
+            <a href="SignIn.html">Search Trains</a>
+            <img src="/UI/Asset/arrow-right.png" class="icon">
           </div>
 
       </div>
+      <div class="other">
+        <div class="lother">
+          <a>Popular Destination</a>
+          <img src="/UI/Asset/search-sharp.png" class="sort">
+        </div>
+        <div class="rother">
+          <a>Explore All</a>
+
+        </div>
+      </div>
+
  </body>
+ <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="./js/firstpage.js"></script>
  </html>
