update book ticket

--- a/FE/BookTicket.html
+++ b/FE/BookTicket.html
@@ -134,6 +134,7 @@
           >
             Continue Book
           </button>
+          <a href="Payment.html">Payment</a>
         </div>
       </div>
     </div>
