update book ticket

--- a/FE/BookTicket.html
+++ b/FE/BookTicket.html
@@ -57,40 +57,28 @@
             <div class="dropdown">
               <input
                 type="text"
-                placeholder="Search.."
+                placeholder="--SOURCE--"
                 id="source"
                 class="myInput"
                 onkeyup="filterFunction()"
                 onclick="myFunction()"
               />
-              <div id="dropdownSource" class="dropdown-content">
-                <p>About</p>
-                <p>Base</p>
-                <p>Blog</p>
-                <p>Contact</p>
-                <p>Custom</p>
-                <p>Support</p>
-                <p>Tools</p>
+              <div id="dropdownSource" class="dropSource dropdown-content">
+                <p>---</p>
               </div>
             </div>
             <h3>TO</h3>
             <div class="dropdown">
               <input
                 type="text"
-                placeholder="Search.."
+                placeholder="--DESTINATION--"
                 id="destination"
                 class="myInput"
                 onkeyup="filterFunction2()"
                 onclick="myFunction2()"
               />
-              <div id="dropdownDes" class="dropdown-content">
-                <p>hehe</p>
-                <p>Base</p>
-                <p>Blog</p>
-                <p>Contact</p>
-                <p>Custom</p>
-                <p>Support</p>
-                <p>Tools</p>
+              <div id="dropdownDes" class="dropDes dropdown-content">
+                <p>---</p>
               </div>
             </div>
             <button class="search">Search</button>
