finish view trip

--- a/FE/BookTicket.html
+++ b/FE/BookTicket.html
@@ -67,7 +67,7 @@
               <option value="Nha Trang">Nha Trang</option>
               <option value="Hue">Hue</option>
               <option value="Lam Dong">Lam Dong</option>
-              <option value="City B">City B</option>
+              <option value="Phan Rang">Phan Rang</option>
             </select>
             <button class="search">Search</button>
           </div>
