--- a/FE/AdminHomepage.html
+++ b/FE/AdminHomepage.html
@@ -21,7 +21,7 @@
         />
       </div>
       <div class="right">
-        <a class="lg" href="ViewPage.html">Logout</a>
+        <a class="lg" href="FirstPage.html">Logout</a>
       </div>
     </header>
     <main>
