--- a/FE/ManageTicket.html
+++ b/FE/ManageTicket.html
@@ -16,7 +16,7 @@
         />
       </div>
       <div class="right">
-        <a class="lg" href="ViewPage.html">Logout</a>
+        <a class="lg" href="FirstPage.html">Logout</a>
       </div>
     </header>
     <main>
