--- a/FE/RechargeBalance.html
+++ b/FE/RechargeBalance.html
@@ -36,26 +36,29 @@
         <h1>Recharge Balance</h1>
         <div class="inside">
           <div class="box">
-              <h2>Balance:</h2>
-            <div class="flex">
-                <div class="rbox">
-                    <h4>Amount:</h4>
-                    <h4>Name on card:</h4>
-                    <h4>Card number:</h4>
-                    <h4>CVV:</h4>
-                    <h4>Expired Date:</h4>
-                </div>
-                <div class="lbox">
-                    <input type="text" name="amount" required><br>
-                    <input type="text" name="name-on-card" required><br>
-                    <input type="text" name="card-number" required><br>
-                    <input type="text" name="CVV" required><br>
-                    <input type="date" name="expired-date" required>
-                </div>
+            <div class="balance">
+              <h2>Balance:</h2><h2 id="balance"></h2><h2>VND</h2>
             </div>
-            <div>
-              <button>Recharge</button>
+            <form action="">
+              <div class="line">
+                  <label for="amount">Amount:</label>
+                  <input type="number" id="amount" name="amount" required>
+              </div>
+              <div class="line">
+                  <label for="cardNum">Card number:</label>
+                  <input type="text" id="cardNum" name="cardNum"required>
+              </div>
+              <div class="line">
+                <label for="CVV">CVV:</label>
+                <input type="text" id="CVV" name="CVV"required>
             </div>
+            <div class="line">
+              <label for="expiredDate">Expired Date:</label>
+              <input type="date" id="expiredDate" name="expiredDate"required>
+          </div>
+          <button onclick="recharge()" class="btn">Recharge</button>
+            </form>
+              
             
           </div>
         </div>
@@ -63,5 +66,5 @@
     </div>
   </body>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="./js/"></script>
+  <script src="./js/rechargeBalance.js"></script>
 </html>
