update book ticket

--- a/FE/BookTicket.html
+++ b/FE/BookTicket.html
@@ -59,7 +59,7 @@
                 type="text"
                 placeholder="--SOURCE--"
                 id="source"
-                class="myInput"
+                autocomplete="off"
                 onkeyup="filterFunction()"
                 onclick="myFunction()"
               />
@@ -73,7 +73,7 @@
                 type="text"
                 placeholder="--DESTINATION--"
                 id="destination"
-                class="myInput"
+                autocomplete="off"
                 onkeyup="filterFunction2()"
                 onclick="myFunction2()"
               />
